Se aplican cambios a codigo para enviar push

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HolaVatos</title>
+    <title>BuenasTardesCaballeros/title>
 </head>
 <body>
-    <h1>Platzi es lo maximo pinchi perro</h1>
+    <h1>Estoy haciendo mi primer cambio en el archivo para poder subirlo a github con push</h1>
 </body>
 </html>
